[tool.poetry]
name = "bkash-self-service-mw"
version = "0.1.0"
description = ""
authors = ["Rafiqul Hasan <rafiqul.hasan@bkash.com>"]

[tool.poetry.dependencies]
python = "3.9.6"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
loguru = "^0.5.3"
celery = "^5.1.2"
motor = "^2.5.1"
redis = "^3.5.3"
hiredis = "^2.0.0"
mwss = { path = "./shared", develop = true }
prometheus-client = "^0.12.0"
ldap3 = "^2.9.1"
PyJWT = "^2.3.0"
email-validator = "^1.1.3"
casbin = "^1.9.6"
casbin-pymongo-adapter = "^1.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
black = "^21.9b0"
isort = "^5.9.3"
flake8 = "^4.0.1"
bandit = "^1.7.0"
pytest = "^6.2.5"
flake8-bugbear = "^21.9.2"

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
